# Azero_SDK_for_Linux

./: .gitignore  CMakeLists.txt  README.md  run.sh
config_file/: license.txt  menu.json  saipara.ser
doc/: Azero OS API Reference.md  ubuntu16.04_x86_64_build_guide.md
doc/API/: Azero OS API Reference.md
doc/Ubuntu/: ubuntu16.04_x86_64_build_guide.md
doc/raspberryPI/: raspberryPI_guide.md
include/: azero_sdk_api.h  azero_sdk_operator.h  sai_micbasex_interface.h
link-libs/aarch64-linux-gnu/lib/: libcrypto.so.1.0.0  libcurl.so.4  libopus.so.0.6.1  libsqlite3.so.0  libssl.so.1.0.0
link-libs/aarch64-linux-gnu/libvlc/: libfaad.so.2  libidn.so.11  libmad.so.2  libmpg123.so.0  libswresample.so.2  libvlc.so.5.6.0  libvlccore.so.9
link-libs/aarch64-linux-gnu/libvlc/vlc/: vlc-cache-gen
link-libs/arm-linux-gnueabihf/lib/: libcrypto.so.1.0.0  libcrypto.so.1.0.2  libcurl.so.4  libnghttp2.so.14.16.1  libsqlite3.so.0  libssl.so.1.0.0
link-libs/arm-linux-gnueabihf/libvlc/: libfaad.so.2  libidn.so.11  libswresample.so.2  libvlc.so.5.6.0
link-libs/arm-linux-gnueabihf/libvlc/vlc/: vlc-cache-gen
link-libs/arm-openwrt-glibc/gplayer/: libSDL2-2.0.so.0.4.1  libSDL2.la  libavdevice.so.57  libavformat.so.57  libavutil.so.55  libbz2.so.1.0  libcrypto.so.1.0.0  libssl.so.1.0.0  libswresample.so.2.3.100  libswscale.so.4.2.100
link-libs/arm-openwrt-glibc/lib/: ld-linux-armhf.so.3  libasound.so.2  libc.so.6  libcrypto.so.1.1  libcurl.so.4.5.0  libdl.so.2  libffi.so.6  libglib-2.0.so.0  libgmodule-2.0.so.0  libgobject-2.0.so.0  libgstapp-1.0.so.0  libgstbase-1.0.so.0  libgstreamer-1.0.so.0  libgthread-2.0.so.0  libm.so.6  libnghttp2.so.14.16.1  libopus.so.0.6.1  libpthread.so.0  librt.so.1  libsqlite3.so.0  libssl.so.1.1  libz.so.1
link-libs/arm-openwrt-musl/lib/: libnghttp2.so.14.16.1  libopus.so.0.6.1  libsqlite3.so.0
link-libs/arm-openwrt-musl/libtp/: libcrypto.so.1.1  libssl.so.1.1
link-libs/x86_64-linux/lib/: libcrypto.so.10  libcurl.so.4.5.0  libnghttp2.so.14  libnghttp2.so.14.16.1  libopus.so.0.6.1  libssl.so.10
sai_config/arm/: config.json  license.txt  menu-fat.json
sai_config/x86_64-linux/: config.json  license.txt  saipara.ser
src/: PortAudioMicrophoneWrapper.cpp  PortAudioMicrophoneWrapper.h  main.cpp
toolchain-cmake/: aarch64-gnu-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  arm-openwrt-glibc-toolchain.cmake  arm-openwrt-musl-toolchain.cmake
